[gd_scene load_steps=3 format=3 uid="uid://bhn16u7hhqek5"]

[ext_resource type="Script" path="res://scripts/top_scene.gd" id="1_8gowc"]
[ext_resource type="Script" path="res://scripts/SingleLayerRect.gd" id="2_v6wdx"]

[node name="TopScene" type="Node2D"]
script = ExtResource("1_8gowc")

[node name="BG" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.941176, 0.941176, 0.941176, 1)

[node name="SingleLayerNNButton" type="Button" parent="."]
offset_left = 1010.0
offset_top = 25.0
offset_right = 1135.0
offset_bottom = 56.0
text = "単層NN"

[node name="TwoLayerNNButton" type="Button" parent="."]
offset_left = 1010.0
offset_top = 83.0
offset_right = 1135.0
offset_bottom = 114.0
text = "２層NN"

[node name="SingleLayerRect" type="ColorRect" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 320.0
script = ExtResource("2_v6wdx")

[connection signal="pressed" from="SingleLayerNNButton" to="." method="_on_single_layer_nn_button_pressed"]
[connection signal="pressed" from="TwoLayerNNButton" to="." method="_on_two_layer_nn_button_pressed"]
